kubernetes/editor_service.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: api-editor-spring
spec:
  template:
    spec:
      containers:
      - image: writeopia_editor:0.0.1
